Kubernetes requests was added
